--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
 </head>
 <body>
   <h1>Pizza Casserole</h1>
-  <img src="./Pizza.jpg" alt="">
+  <img src="./Pizza.jpg" alt="Pizza Casserole on the table">
+  <h2>Ingredients</h2>
+  <ul>
+    <li>2 cups uncooked egg noodles</li>
+    <li>½ pound lean ground beef </li>
+    <li>1 onion, chopped</li>
+    <li>2 cloves garlic, minced </li>
+    <li>1 green bell pepper, chopped </li>
+    <li>1 cup sliced pepperoni sausage</li>
+    <li>16 ounces pizza sauce</li>
+    <li>4 tablespoons milk </li>
+    <li>1 cup shredded mozzarella cheese</li>
+  </ul>
+  <h2>Directions</h2>
+  <ol>
+    <li>Cook noodles according to package directions.</li>
+    <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+    <li>In a medium skillet over medium-high heat, brown the ground beef with the onion, garlic and green bell pepper. Drain excess fat. Stir in the noodles, pepperoni, pizza sauce and milk, and mix well. Pour this mixture into a 2-quart casserole dish.</li>
+    <li>Bake at 350 degrees F (175 degrees C) for 20 minutes, top with the cheese, then bake for 5 to 10 more minutes.</li>
+  </ol>
 </body>
 </html>
