add directions of cooking to the page and links to other recipes

--- a/beefFlorentine.html
+++ b/beefFlorentine.html
@@ -29,6 +29,22 @@
     <li> 1 medium head bok choy, chopped </li>
     <li> 1 medium carrot, sliced</li>
   </ul>
-
+  <h2>Directions</h2>
+  <ol>
+    <li>Combine soy sauce, cornstarch, sesame oil, and garlic for marinade in a glass or ceramic bowl. Add the chicken and marinate for at least 30 minutes.
+    </li>
+    <li>Heat 1 tablespoon vegetable oil in a saute pan over medium-high heat. Add the chicken. Stir-fry until lightly browned and cooked through, 3 to 5 minutes. Transfer cooked chicken to a plate for later.
+    </li>
+    <li>Meanwhile, bring a large pot of water to a boil. Add noodles and cook over medium heat until cooked through but still firm to the bite, 4 to 5 minutes. Drain and rinse with cold water.
+    </li>
+    <li>Whisk chicken stock, oyster sauce, soy sauce, and cornstarch together in another bowl. Set aside.
+    </li>
+    <li>Heat 2 teaspoons vegetable oil in the same pan you cooked the chicken in over medium-high heat. Add garlic. Add bok choy and carrot; stir-fry until tender, about 5 minutes. Add the cooked noodles and chicken stock mixture; stir to combine and cook until the sauce has thickened. Add the chicken back to the pan; stir to combine until warm. Serve.
+    </li>
+  </ol>
+  <ul>
+    <li><a href="./index.html">Pizza cassarole recipe</a></li>
+    <li><a href="./cheesyBeef.html">Cheesy Beef recipe</a></li>
+  </ul>
 </body>
 </html>
