remane the title and main heading of chichen chow mein page

--- a/chickenChowmein.html
+++ b/chickenChowmein.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beef Florentine</title>
+  <title>Chicken Chow Mein</title>
 </head>
 <body>
-  <h1>Beef Florentine</h1>
+  <h1>Chicken Chow Mein</h1>
   <p>A great Chow Mein comes down to the sauce which is made with soy sauce, oyster sauce, sesame oil, sugar and cornstarch for thickening. Slippery noodles slick with the savoury Chow Mein Sauce is noodle heaven!</p>
   <img src="./Chicken.jpg" alt="Chicken chow Mein">
   <h2>Ingredients</h2>
