add links to other recipes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <li>2 cups uncooked egg noodles</li>
     <li>½ pound lean ground beef </li>
     <li>1 onion, chopped</li>
-    <li>2 cloves garlic, minced </li>
-    <li>1 green bell pepper, chopped </li>
+    <li>2 cloves garlic, minced</li>
+    <li>1 green bell pepper, chopped</li>
     <li>1 cup sliced pepperoni sausage</li>
     <li>16 ounces pizza sauce</li>
     <li>4 tablespoons milk </li>
@@ -33,6 +33,10 @@
   <ul>
     <li></li>
     <li></li>
+  </ul>
+  <ul>
+    <li><a href="./cheesyBeef.html">Cheesy Beef recipe</a></li>
+    <li><a href="./chickenChowmein.html">Chicken chow Mein recipe</a></li>
   </ul>
 </body>
 </html>
