--- a/chickenChowmein.html
+++ b/chickenChowmein.html
@@ -42,6 +42,7 @@
     <li>Heat 2 teaspoons vegetable oil in the same pan you cooked the chicken in over medium-high heat. Add garlic. Add bok choy and carrot; stir-fry until tender, about 5 minutes. Add the cooked noodles and chicken stock mixture; stir to combine and cook until the sauce has thickened. Add the chicken back to the pan; stir to combine until warm. Serve.
     </li>
   </ol>
+  <h3>Related Recipes</h3>
   <ul>
     <li><a href="./index.html">Pizza cassarole recipe</a></li>
     <li><a href="./cheesyBeef.html">Cheesy Beef recipe</a></li>
