--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <li></li>
     <li></li>
   </ul>
+  <h3>Related Recepis</h3>
   <ul>
     <li><a href="./cheesyBeef.html">Cheesy Beef recipe</a></li>
     <li><a href="./chickenChowmein.html">Chicken chow Mein recipe</a></li>
