add list items to recipe links

--- a/cheesyBeef.html
+++ b/cheesyBeef.html
@@ -41,8 +41,8 @@
   </ol>
   <h3>Related Recipes</h3>
   <ul>
-    <a href="index.html">Pizza casserole recipe</a>
-    <a href="./chickenChowmein.html"> Chicken Chow mein recipe</a>
+    <li><a href="index.html">Pizza casserole recipe</a></li>
+    <li><a href="./chickenChowmein.html"> Chicken Chow mein recipe</a></li>
   </ul>
 
 </body>
