--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
   <title>Odin Recipes</title>
 </head>
@@ -11,6 +14,38 @@
   <header>
     <h1>Odin Recipes</h1>
   </header>
+  <section class="recipe-links">
+    <p>
+      We would like to take this opportunity to welcome you to our restaurant. We guarantee you the freshest food, delivered daily to our dock, prepared to your liking. We can prepare a specific meal by request. All our locations are providing a wonderful open-air venue to enjoy the meal all year round, we offer both indoor and alfresco dining and our focus is on serving.
+    </p>
+    <div class="links-container">
+      <div class="beef-noodle">
+        <a href="./Pizza-casserole.html">
+          <img src="./Beef-Noodle.jpg" alt="">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        </p>
+        </a>
+      </div>
+      <div class="cheesy-beef">
+        <a href="./cheesyBeef.html">
+          <img src="./Pizza.jpg" alt="">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        </a>
+      </div>
+      <div class="chickenChowmein">
+        <a href="./chickenChowmein.html">
+          <img src="./Chicken.jpg" alt="">
+        <p>
+          Chow mein is a traditional Chinese dish made with egg noodles and stir-fried veggies.
+        </p>
+        </a>
+      </div>
+
+    </div>
+  </section>
   
 </body>
 </html>
